-
Bug
-
Resolution: Done
-
P1: Critical
-
6.4.0
-
1e712c95ce (qt/qtdeclarative/dev) 1e712c95ce (qt/tqtc-qtdeclarative/dev) a3a7926c6c (qt/qtdeclarative/6.4) a3a7926c6c (qt/tqtc-qtdeclarative/6.4) a3a7926c6c (qt/tqtc-qtdeclarative/tqtc/qtinsight-6.4)
compare this code:
import QtQuick 2.15 import QtQuick.Controls 2.12 Item { Label { background: Rectangle { color: palette.base } } }
running qmlcachegen raises this assertion failure:
ASSERT: "!errorType.isEmpty()" in file /Users/tim/dev/qt3rd/qtdeclarative/src/qmlcompiler/qqmljstypepropagator.cpp, line 497
For Gerrit Dashboard: QTBUG-107080 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
435992,5 | QmlCompiler: Do not crash on version-mismatched property access | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
436988,4 | QmlCompiler: Do not crash on version-mismatched property access | 6.4 | qt/qtdeclarative | Status: MERGED | +2 | 0 |