QmlCompiler: Do not crash on version-mismatched property access

If we cannot access a property due to a version mismatch, that's not an
unqualified access.

Pick-to: 6.4
Fixes: QTBUG-107080
Change-Id: I1780b171928df437a2121601f1aac829dbe1e994
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>